clusters/tractor-k8s-production/webhook-ingress.yaml
#
# Network policy for acmesolver
#
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-acmesolver-ingress
  namespace: flux-system
spec:
  podSelector:
    matchLabels:
      acme.cert-manager.io/http01-solver: "true"
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector: {}
#
# Gateway / Route
#
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: webhook-receiver
  namespace: flux-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  gatewayClassName: traefik
  listeners:
    - name: https
      protocol: HTTPS
      port: 8443
      hostname: flux.prod.k8s.tractor.scout.ch
      tls:
        mode: Terminate
        certificateRefs:
          - name: webhook-receiver-secret-tls
            namespace: flux-system
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: webhook-receiver-https
  namespace: flux-system
spec:
  parentRefs:
    - name: webhook-receiver
      sectionName: https
      kind: Gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: webhook-receiver
          port: 80
